# im362HDR

./: .cproject  .gitignore  .project  CMakeLists.txt  zigzag HDR flow.vsd  zigzag simplied WDR .vsd
Debug/: IMX362HDR.lsf
cmake/: clean-generated.cmake  version.cmake
include/: DebugFiles.h  XM4_defines.h  hdr_process.h  hdr_zigzag.h  profiler.h  rk_bayerhdr.h  rk_bayerwdr.h  rk_global.h  rk_typedef.h
matlab_ext/: WriteRaw2RGB_Demosaic.m  readRawToBmp.m
src/: DebugFiles.cpp  DebugFiles.h  hdr_process.cpp  hdr_tonning.cpp  hdr_zigzag.cpp  main.cpp  rk_bayerwdr.cpp  rk_denoiser.cpp  rk_dma.cpp  rk_mfnr.cpp  rk_register.cpp  test_wdr.cpp  wdr_simu_cevaxm4.cpp  wdr_weight.cpp  zigZagBayerInterpo.cpp
table/: Region4IndexTable.txt
